# DeepLearningSpeechCommands

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/experiments/: A1_cnn_baseline.yaml  A2_kwt.yaml  A2_kwt_small.yaml  A3_kwt_medium.yaml  A4_ast.yaml  A4_bc_resnet.yaml  A5_ast.yaml  C1_flat.yaml  C2_flat_rebalanced.yaml  C3_hierarchical.yaml  C4_hierarchical_bc_resnet.yaml  grid_search_defaults.yaml
configs/model/: ast.yaml  bc_resnet_1_5.yaml  cnn_baseline.yaml  kwt_2.yaml  kwt_medium.yaml  kwt_small.yaml
configs/train/: default.yaml
docs/: AUDIO_BACKEND.md  technical_plan_copilot.md
notebooks/: colab_train.ipynb
scripts/: evaluate.py  export_results.py  prepare_data.py  report_model_results.py  run_experiment.py  run_grid_experiments.py  setup_audio_backend.sh  train.py
src/data/: dataset.py  feature_cache.py  labels.py  sampler.py  transforms.py
src/evaluation/: confusion.py  metrics.py  reports.py
src/inference/: predict.py
src/models/: __init__.py  ast_wrapper.py  bc_resnet.py  cnn_baseline.py  hierarchical.py  kwt.py
src/training/: callbacks.py  losses.py  seed.py  trainer.py
src/utils/: README.md  audio.py  config.py  constants.py  io.py  logging.py  paths.py  run_names.py
tests/: test_data.py  test_inference.py  test_metrics.py  test_models.py  test_training.py
